<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/white"
    android:layout_height="match_parent"
    tools:context=".ui.welcome.SignUpFragment">

    <ScrollView
        android:layout_width="match_parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:focusable="true"
        android:focusableInTouchMode="true"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingVertical="24dp"
            android:layout_marginHorizontal="42dp">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:adjustViewBounds="true"
                android:src="@drawable/img_pawrents_logo"
                android:layout_marginHorizontal="6dp"
                />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins_bold"
                android:text="@string/sign_up"
                android:textColor="@color/deep_blue_two"
                android:textSize="32sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins_semibold"
                android:text="@string/name"
                android:textColor="@color/blue_two"
                android:textSize="20sp" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/etName"
                android:hint=" "
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/edit_text_box"
                    android:fontFamily="@font/inter"
                    android:hint="@string/enter_your_name"
                    android:textColor="@color/black"
                    android:textColorHint="@color/gray_two"
                    android:inputType="text" />
            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins_semibold"
                android:text="@string/email"
                android:textColor="@color/blue_two"
                android:textSize="20sp" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/etEmail"
                android:hint=" "
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/edit_text_box"
                    android:fontFamily="@font/inter"
                    android:hint="@string/enter_email"
                    android:textColor="@color/black"
                    android:textColorHint="@color/gray_two"
                    android:inputType="textEmailAddress" />
            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins_semibold"
                android:text="@string/password"
                android:textColor="@color/blue_two"
                android:textSize="20sp" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/etPassword"
                android:hint=" "
                android:layout_width="match_parent"
                app:passwordToggleDrawable="@drawable/password_toogle_selector"
                app:passwordToggleTint="@color/gray_two"
                app:passwordToggleEnabled="true"
                android:layout_height="wrap_content">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/edit_text_box"
                    android:fontFamily="@font/inter"
                    android:hint="@string/enter_password"
                    android:textColor="@color/black"
                    android:textColorHint="@color/gray_two"
                    android:inputType="textPassword" />
            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins_semibold"
                android:text="@string/confirm_password"
                android:textColor="@color/blue_two"
                android:textSize="20sp" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/etConfirmPassword"
                android:hint=" "
                app:passwordToggleEnabled="true"
                app:passwordToggleDrawable="@drawable/password_toogle_selector"
                android:layout_width="match_parent"
                app:passwordToggleTint="@color/gray_two"
                android:layout_height="wrap_content">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/edit_text_box"
                    android:fontFamily="@font/inter"
                    android:textColor="@color/black"
                    android:hint="@string/enter_your_password_again"
                    android:textColorHint="@color/gray_two"
                    android:inputType="textPassword" />
            </com.google.android.material.textfield.TextInputLayout>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnSignUp"
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:layout_marginTop="32dp"
                android:fontFamily="@font/poppins_semibold"
                android:textSize="20sp"
                android:text="@string/sign_up"
                android:textColor="@color/white"
                android:background="@drawable/deepblue_box_10"
                />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="16dp"
                android:gravity="center"
                >
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/poppins_semibold"
                    android:textColor="@color/blue_two"
                    android:text="@string/do_you_have_any_accout"
                    />

                <TextView
                    android:id="@+id/btnToSignIn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:fontFamily="@font/poppins_semibold"
                    android:textColor="@color/deep_blue_two"
                    android:text="@string/sign_in_underlined"
                    />
            </LinearLayout>

            <TextView
                android:id="@+id/btnSkip"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/inter"
                android:layout_gravity="center"
                android:layout_marginTop="24dp"
                android:textSize="16sp"
                android:textColor="@color/blue_two"
                android:text="@string/skip"
                />

        </LinearLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>