<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.signin.SignInFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:orientation="vertical"
        android:paddingVertical="24dp"
        android:layout_marginHorizontal="42dp">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:adjustViewBounds="true"
            android:src="@drawable/img_pawrents_logo"
            android:layout_marginHorizontal="6dp"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins_bold"
            android:text="@string/sign_in"
            android:textColor="@color/deep_blue_two"
            android:textSize="32sp" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins_semibold"
            android:text="@string/email"
            android:textColor="@color/blue_two"
            android:textSize="20sp" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/etEmail"
            android:hint=" "
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/edit_text_box"
                android:fontFamily="@font/inter"
                android:hint="@string/enter_your_email"
                android:textColor="@color/black"
                android:textColorHint="@color/gray_two"
                android:inputType="textEmailAddress" />
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins_semibold"
            android:text="@string/password"
            android:textColor="@color/blue_two"
            android:textSize="20sp" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/etPassword"
            android:hint=" "
            android:layout_width="match_parent"
            app:passwordToggleDrawable="@drawable/password_toogle_selector"
            app:passwordToggleTint="@color/gray_two"
            app:passwordToggleEnabled="true"
            android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/edit_text_box"
                android:fontFamily="@font/inter"
                android:textColor="@color/black"
                android:hint="@string/enter_your_password"
                android:textColorHint="@color/gray_two"
                android:inputType="textPassword" />
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/btnForgetPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/forget_password"
            android:layout_gravity="end"
            android:textColor="@color/blue_two"
            android:layout_marginTop="4dp"
            android:fontFamily="@font/poppins_semibold"
            />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnSignIn"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:layout_marginTop="18dp"
            android:fontFamily="@font/poppins_semibold"
            android:textSize="20sp"
            android:text="@string/sign_in"
            android:textColor="@color/white"
            android:background="@drawable/deepblue_box_10"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="16dp"
            android:gravity="center"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins_semibold"
                android:textColor="@color/blue_two"
                android:text="@string/don_t_have_an_account"
                />

            <TextView
                android:id="@+id/btnToSignUp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:fontFamily="@font/poppins_semibold"
                android:textColor="@color/deep_blue_two"
                android:text="@string/sign_up_underlined"
                />
        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>