<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.welcome.OpeningFragment">

   <LinearLayout
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:orientation="vertical"
       app:layout_constraintStart_toStartOf="parent"
       app:layout_constraintEnd_toEndOf="parent"
       app:layout_constraintTop_toTopOf="parent"
       app:layout_constraintBottom_toBottomOf="parent"
       android:layout_marginHorizontal="60dp"
       >

       <ImageView
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:adjustViewBounds="true"
           android:src="@drawable/img_pawrents_logo"
           />

       <TextView
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:includeFontPadding="false"
           android:fontFamily="@font/poppins_semibold"
           android:text="@string/opening_words"
           android:textAlignment="center"
           android:maxLines="2"
           android:textSize="28sp"
           android:textColor="@color/deep_blue_two"
           android:gravity="center"
           android:layout_marginTop="8dp"
           android:autoSizeMaxTextSize="28sp"
           android:autoSizeMinTextSize="18sp"
           android:autoSizeTextType="uniform" />

       <TextView
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:layout_marginTop="8dp"
           android:autoSizeMaxTextSize="13sp"
           android:autoSizeMinTextSize="10sp"
           android:autoSizeTextType="uniform"
           android:fontFamily="@font/poppins_light"
           android:gravity="center"
           android:includeFontPadding="false"
           android:maxLines="2"
           android:text="@string/opening_desc"
           android:textAlignment="center"
           android:textColor="@color/black"
           android:textSize="13sp" />

       <LinearLayout
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:orientation="horizontal"
           android:layout_marginTop="20dp">

           <androidx.appcompat.widget.AppCompatButton
               android:id="@+id/btnSignUp"
               android:layout_width="match_parent"
               android:layout_height="49dp"
               android:layout_marginHorizontal="6dp"
               android:layout_weight="1"
               android:background="@drawable/deepblue_box_10"
               android:fontFamily="@font/inter_semibold"
               android:text="@string/sign_up"
               android:textColor="@color/white"
               android:textSize="18sp" />

           <androidx.appcompat.widget.AppCompatButton
               android:id="@+id/btnSkip"
               android:layout_width="match_parent"
               android:layout_height="49dp"
               android:text="@string/skip"
               android:textSize="18sp"
               android:background="@drawable/deepblue_box_10"
               android:layout_marginHorizontal="6dp"
               android:fontFamily="@font/inter_semibold"
               android:textColor="@color/white"
               android:layout_weight="1" />
       </LinearLayout>

   </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>